Fix line height causing the arrow to be misaligned

--- a/src/styles/slick/slick-theme.scss
+++ b/src/styles/slick/slick-theme.scss
@@ -83,7 +83,6 @@ $slick-opacity-not-active: 0.25 !default;
     &:before {
         font-family: $slick-font-family;
         font-size: 30px;
-        line-height: 1;
         color: $slick-arrow-color;
         opacity: $slick-opacity-default;
         -webkit-font-smoothing: antialiased;
